--- a/niraj-kum-portfolio/package.json
+++ b/niraj-kum-portfolio/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-scripts": "5.0.1",
+    "react-top-loading-bar": "^2.3.1",
     "react-vertical-timeline-component": "^3.6.0",
     "typescript": "^4.9.5",
     "typewriter-effect": "^2.21.0",
